# rust-soapysdr

./: .travis.yml  Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
examples/: soapy-sdr-stream.rs
soapysdr-sys/: Cargo.toml  README.md  build.rs  wrapper.c  wrapper.h
soapysdr-sys/bindings/: bindings.rs  bindings_linux.rs  bindings_macos.rs  bindings_windows.rs
soapysdr-sys/src/: bindings.rs  lib.rs
src/: arginfo.rs  args.rs  device.rs  format.rs  lib.rs
