[workspace]
[package]
name = "soapysdr"
version = "0.1.0"
authors = ["Kevin Mehall <km@kevinmehall.net>"]
categories = ["api-bindings", "hardware-support"]
keywords = ["ffi", "sdr", "radio", "rtlsdr", "hackrf", "usrp", "limesdr", "bladerf", "airspy"]
description = "Hardware abstraction layer for many software defined radio devices."
license = "BSL-1.0/Apache-2.0"
documentation = "https://kevinmehall.net/rustdoc/soapysdr/soapysdr/"
repository = "https://github.com/kevinmehall/rust-soapysdr"

[dependencies]
soapysdr-sys = { version = "0.5.0", path = "./soapysdr-sys" }
libc = "0.2.20"
num-complex = "0.1"
