[workspace]
[package]
name = "soapysdr"
version = "0.4.3"
edition = "2021"
authors = ["Kevin Mehall <km@kevinmehall.net>"]
categories = ["api-bindings", "hardware-support"]
keywords = ["sdr", "radio"]
description = """
Library wrapping SoapySDR, a hardware abstraction layer for many software defined radio devices,
including rtl-sdr, HackRF, USRP, LimeSDR, BladeRF, and Airspy.
"""
license = "BSL-1.0 OR Apache-2.0"
documentation = "https://kevinmehall.net/rustdoc/soapysdr/soapysdr/"
repository = "https://github.com/kevinmehall/rust-soapysdr"
readme = "README.md"
exclude = ["shell.nix", ".github"]

[dependencies]
soapysdr-sys = { version = "0.7.5", path = "./soapysdr-sys" }
num-complex = "0.4"
log = { version = "0.4", optional = true }

# Dependencies used only by binaries
# (https://github.com/rust-lang/cargo/issues/1982)
byteorder = { version = "1.1", optional = true }
getopts = { version = "0.2.4", optional = true }
signalbool = { version = "0.2.0", optional = true }

[features]
default = ["log"]
binaries = ["byteorder", "getopts", "signalbool"]

[[bin]]
name = "soapy-sdr-info"
path = "src/bin/soapy-sdr-info.rs"
required-features = ["binaries"]

[[bin]]
name = "soapy-sdr-stream"
path = "src/bin/soapy-sdr-stream.rs"
required-features = ["binaries"]
