[package]
name = "soapysdr-sys"

# Note: Major and minor will track SoapySDR version, patch is
# specific to this library
version = "0.7.0"
authors = ["Kevin Mehall <km@kevinmehall.net>"]
categories = ["external-ffi-bindings"]
keywords = ["ffi", "sdr"]
description = """
Bindings for the C API of SoapySDR, the vendor-neutral
software defined radio hardware abstraction layer.
"""
license = "BSL-1.0/Apache-2.0"
build = "build.rs"
documentation = "https://kevinmehall.net/rustdoc/soapysdr/soapysdr_sys/"
repository = "https://github.com/kevinmehall/rust-soapysdr"

[dependencies]

[build-dependencies]
bindgen = "0.51"
cc = "1.0"
pkg-config = "0.3.9"
