[package]
name = "soapysdr-sys"

# Note: Major and minor will track SoapySDR version, patch is
# specific to this library
version = "0.8.0"
edition = "2024"
rust-version = "1.85"
authors = ["Kevin Mehall <km@kevinmehall.net>"]
categories = ["external-ffi-bindings"]
keywords = ["ffi", "sdr"]
description = """
Bindings for the C API of SoapySDR, the vendor-neutral
software defined radio hardware abstraction layer.
"""
license = "BSL-1.0"
build = "build.rs"
links = "soapysdr"
repository = "https://github.com/kevinmehall/rust-soapysdr"

[build-dependencies]
pkg-config = "0.3.9"
